# OpenKODE

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: build_action.yml
include/KD/: ATX_bluetooth.h  ATX_dxtcomp.h  ATX_imgdec.h  ATX_imgdec_jpeg.h  ATX_imgdec_png.h  ATX_imgdec_pvr.h  KHR_float64.h  KHR_formatted.h  KHR_perfcounter.h  KHR_thread_storage.h  kd.h  kdext.h  kdplatform.h
src/: config.h.in  main.c  meson.build
src/app/: main.c
src/core/: app.c  assert.c  bluetooth.c  dxtcomp.c  error.c  event.c  file.c  float64.c  formatted.c  imagedec.c  io.c  locale.c  math.c  memory.c  meson.build  network.c  perfcounter.c  query.c  string.c  thread.c  time.c  timer.c  tls.c  ts.c  utility.c  window.c
