core_srcs = files(
    'app.c',
    'assert.c',
    'bluetooth.c',
#   'dxtcomp.c',
    'error.c',
    'event.c',
    'file.c',
    'float64.c',
    'formatted.c',
#   'imagedec.c',
    'io.c',
    'locale.c',
    'math.c',
    'memory.c',
    'network.c',
    'perfcounter.c',
    'query.c',
    'string.c',
    'thread.c',
    'time.c',
    'timer.c',
    'tls.c',
    'ts.c',
    'utility.c',
    'window.c',
)
